# Epidemic-Simulator

./: .coverage  .gitignore  3DSphere.py  MIT-LICENSE.txt  README.md  init.py  mapwithpeople.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
pip-wheel-metadata/Simulator-0.0.10.dist-info/: METADATA
pip-wheel-metadata/Simulator.egg-info/: PKG-INFO  SOURCES.txt
src/: README.md
src/Simulator/: 3DSphere.py  ThreeDSphere.py  bettersir.py  config.ini  helper.py  init.py  introduction.py  main.py  sir.py
src/Simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/Simulator/media/Tex/: 0298db1a6c844301.dvi  3b7e741a76ee76a4.dvi  3d03f1e61f74f6b3.dvi  53bb44bbc9667a68.dvi  53bb44bbc9667a68.tex  5707bd4d558c91bd.dvi  630958bbd56f8775.dvi  636fcc1c0070bb50.dvi  80ddffefd27ba267.dvi  8386c3620d3a3466.dvi  83cf8a4604112940.dvi  83cf8a4604112940.tex  ce14bce8a4b9ddee.dvi  d9294a8d6b301b15.dvi  e6189ce8b7162273.dvi  f29bc5892dc2918f.dvi  f29bc5892dc2918f.tex
tests/: test_helper.py
