[metadata]
name = Simulator
description = simulate epidemic
author = Arshdeep Singh, Mandeep Mahra
license = MIT
license_file = MIT-LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    slapping
install_requires =
    manimgl>=1.6.1
    numpy>= 1.23.5
python_requires = >=3.7
package_dir =
    =src
zip_safe = No
